--- a/allifmaalcommonapp/templates/allifmaalcommonapp/customers/customers.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/customers/customers.html
@@ -128,7 +128,9 @@
     </div>
     </ul>
   </div>
-  <a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
+  
+  <a href="{% url 'allifmaalcommonapp:commonReceiveCustomerMoney' user_var glblslug %}">Receive Customer Payment</a>
+
   </div>
   
       </div><!--end....header column-->
