--- a/allifmaalcommonapp/templates/allifmaalcommonapp/payments/suppliers/pay-supplier.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/payments/suppliers/pay-supplier.html
@@ -6,96 +6,160 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
-<div class="allifmaincontainer">
-  
+<div class="allifmaal-main-container">
+ 
 <!--start....main headere-->
 <div class="card-header">
 
-  <div class="row mt-12" ><!--start....header row-->
-  
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+<div class="row mt-12" ><!--start....header row-->
 
-    <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}">Suppliers</a>
-    <a href="{% url 'allifmaalcommonapp:commonSupplierPayments' user_var glblslug %}">Supplier Payments</a>
+<div class="col-md-12"><!--start....header column-->
 
+<div class="container-fluid amel-content-header">
 
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Modules
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}" >Employees</a></li>
-     
-    </div>
-    </ul>
-  </div>
-  <a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
-  </div>
+  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
   
-      </div><!--end....header column-->
+  <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}">Suppliers</a>
+  <a href="{% url 'allifmaalcommonapp:commonSupplierPayments' user_var glblslug %}">Supplier Payments</a>
+
+ 
+</div>
+
+    </div><!--end....header column-->
+  
+  </div><!--end....header row-->
+
+</div><!--end....main headere-->
+
+
+  <div class="allifmaincontainer">
+
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Pay {{allifquery}}</div>
+  <form method='POST' action=''>{% csrf_token %}
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
     
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="col-md-12"><!--start of the first row body-->
-      <div class="table-details-content-description">Make a payment to {{allifquery}} </div>
-        <div class="allif-form-container">
-        <form method='POST' action=''>{% csrf_token %}
-        <div class="row"><!--start of row div --->
-          <div class="col-md-4"><!--start of column 1-->
-            <div class="card shadow text-left p-3 allif-form-card" >
-            <label>Division Name</label> {{form.division}}
-            <label>Branch Name</label> {{form.branch}}
-            <label>Department Name</label> {{form.department}}
-            <label>Pay From Acccount</label> {{form.account}}
-            
-            <label>Supplier</label> {{form.supplier}}
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+       
+      <tr>
+        <td class="allif-fix-table-col">Division</td>
+        <td>{{form.division}}</td>
+    
+        </tr>
+        
+        <tr>
+          <td class="allif-fix-table-col">Branch</td>
+          <td>{{form.branch}}</td>
+      
+          </tr>
+          <tr>
+            <td class="allif-fix-table-col">Department</td>
+            <td>{{form.department}}</td>
+        
+            </tr>
+          <tr>
+            <td class="allif-fix-table-col">Pay From A/C</td>
+            <td>{{form.account}}</td>
+        
+            </tr>
            
+             
           
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+         
+            <tr>
+              <td class="allif-fix-table-col">Supplier</td>
+              <td>{{form.supplier}}</td>
+          
+              </tr>
+         
+                  <tr>
+                    <td class="allif-fix-table-col">Description</td>
+                    <td>{{form.description}}</td>
+                
+                    </tr>
+                    <tr>
+                      <td class="allif-fix-table-col">Posting Status</td>
+                      <td>{{form.status}}</td>
+                  
+                      </tr>
+                     
+                      <tr>
+                        <td class="allif-fix-table-col">Amount</td>
+                        <td>{{form.amount}}</td>
+                    
+                        </tr>   
+          </tbody>
+          </table>
           </div>
-            </div><!--end of column 1-->
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
         
-            <div class="col-md-4"><!--start of column 2-->
-            <div class="card shadow text-left p-3 allif-form-card">
-              <label>Amount</label> {{form.amount}}
-            <label>Description</label> {{form.description}}
-              <label>Mode of Payment</label> {{form.mode}}
-              <label>Comments</label> {{form.comments}}
+            <tr>
+              <td class="allif-fix-table-col">Terms</td>
+              <td>{{form.mode}}</td>
+          
+              </tr>
+            
+              <tr>
+                <td class="allif-fix-table-col">Comments</td>
+                <td>{{form.comments}}</td>
+            
+                </tr>
+            <tr>
+              <td class="allif-fix-table-col">Action</td>
+              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+          
+              </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
 
-               
-               
-                </div>
-            </div><!--end of column 2-->
-            <div class="col-md-4"><!--start of column 3-->
-            <div class="card shadow text-left p-3 allif-form-card">
-              <label>Comments </label> {{form.comments}}
-                <label>Posting Status</label> {{form.status}}
-                <br>
-                <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn">
-        
-                </div>
-            </div><!--end of column 1-->
-        
-        </div><!--end of row div --->
-            </form>
-            </div>
-            </div><!--end of first row body-->
 </div><!--end....table row-->
-
+</div>
+</form>
 <!--end of table-->
-
 
 </div><!--end of main container of the page....-->
 
+
+
+
+</div>
+
+</div>
   {% block scripts %}
 
   {% endblock %}
    {% endblock %}
-   
+  
