--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/salaries/add-salary.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/salaries/add-salary.html
@@ -6,71 +6,174 @@
 {% block style %}
 {%endblock%}
 {% block body %}
+<div class="allifmaal-main-container">
+ 
+<!--start....main headere-->
+<div class="card-header">
 
-<div class="allifmaincontainer">
+<div class="row mt-12" ><!--start....header row-->
 
-  <!--start....main headere-->
-  <div class="card-header">
+<div class="col-md-12"><!--start....header column-->
 
-    <div class="row mt-12" ><!--start....header row-->
+<div class="container-fluid amel-content-header">
 
-    <div class="col-md-12"><!--start....header column-->
-      
-        <div class="table-details-content-description">Add New Staff Salary</div>
+  <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+  <a href="{% url 'allifmaalcommonapp:commonSalaries' user_var glblslug %}">Salaries</a>
+ 
+</div>
+
     </div><!--end....header column-->
   
   </div><!--end....header row-->
 
 </div><!--end....main headere-->
+
+
+  <div class="allifmaincontainer">
+
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Add/Edit New Expense</div>
+  <form method='POST' action=''>{% csrf_token %}
+  <div class="col-md-12"> <!--start....table column-->
+  <div class="allif-scroll-table">
+    <div class="allif-info-tables">
+      <div class="row"><!--start of row div --->
+  <!--start of column two-->
+  <div class="col-md-4">
     
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+       
+          
+              
+           
+      <tr>
+        <td class="allif-fix-table-col">Division</td>
+        <td>{{form.division}}</td>
+    
+        </tr>
+        
+        <tr>
+          <td class="allif-fix-table-col">Branch</td>
+          <td>{{form.branch}}</td>
+      
+          </tr>
+          <tr>
+            <td class="allif-fix-table-col">Department</td>
+            <td>{{form.department}}</td>
+        
+            </tr>
+          <tr>
+            <td class="allif-fix-table-col">Staff</td>
+            <td>{{form.staff}}</td>
+        
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Pay From A/C</td>
+              <td>{{form.account}}</td>
+          
+              </tr>
+             
+          
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+        
+        
+          <tr>
+            <td class="allif-fix-table-col">Mode</td>
+            <td>{{form.mode}}</td>
+        
+            </tr>
+            <tr>
+              <td class="allif-fix-table-col">Amount</td>
+              <td>{{form.amount}}</td>
+          
+              </tr>
+         
+                  <tr>
+                    <td class="allif-fix-table-col">Description</td>
+                    <td>{{form.description}}</td>
+                
+                    </tr>
+                
+                      <tr>
+                        <td class="allif-fix-table-col">Amount</td>
+                        <td>{{form.amount}}</td>
+                    
+                        </tr>   
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+        
+            <tr>
+              <td class="allif-fix-table-col">Terms</td>
+              <td>{{form.mode}}</td>
+          
+              </tr>
+              <tr>
+                <td class="allif-fix-table-col">Status</td>
+                <td>{{form.status}}</td>
+            
+                </tr>
+                <tr>
+                  <td class="allif-fix-table-col">Salary Payable</td>
+                  <td>{{form.salary_payable}}</td>
+              
+                  </tr>
+                
+          
+              <tr>
+                <td class="allif-fix-table-col">Comments</td>
+                <td>{{form.comments}}</td>
+            
+                </tr>
+            <tr>
+              <td class="allif-fix-table-col">Action</td>
+              <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+          
+              </tr>
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
+      
+        </div>
 
-  <div class="row mt-12"> <!--start....table row-->
-    <div class="col-md-12"><!--start of the first row body-->
-        <div class="allif-form-container">
-        <form method='POST' action=''>{% csrf_token %}
-        <div class="row"><!--start of row div --->
-            <div class="col-md-4"><!--start of column 1-->
-                <div class="card shadow text-left p-3 allif-form-card" >
-                <label>Division</label> {{form.division}}
-                <label>Branch</label> {{form.branch}}
-                <label>Department</label> {{form.department}}
-                <label>Staff</label> {{form.staff}}
-               
-               
-                </div>
-            </div><!--end of column 1-->
-        
-            <div class="col-md-4"><!--start of column 2-->
-            <div class="card shadow text-left p-3 allif-form-card">
-              <label>Description</label>{{form.description}}
-              <label>Amount</label>{{form.amount}}
-              <label>Pay From Account</label>{{form.account}}
-              <label>Comments</label>{{form.comments}}
-              
-              
-                </div>
-            </div><!--end of column 2-->
-            <div class="col-md-4"><!--start of column 3-->
-            <div class="card shadow text-left p-3 allif-form-card">
-              <label>Mode</label>{{form.mode}}
-              <label>Status</label>{{form.status}}
-              <label>Salary Payable</label>{{form.salary_payable}}
-                <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn">
-  
-                </div>
-            </div><!--end of column 1-->
-        
-        </div><!--end of row div --->
-            </form>
-            </div>
-            </div><!--end of first row body-->
 </div><!--end....table row-->
-
+</div>
+</form>
 <!--end of table-->
-
 
 </div><!--end of main container of the page....-->
 
+
+
+
+</div>
+
+</div>
   {% block scripts %}
 
   {% endblock %}
