--- a/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/salaries/salary-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/hrm/salaries/salary-details.html
@@ -6,208 +6,163 @@
 {% block style %}
 {%endblock%}
 {% block body %}
+<div class="allifmaal-main-container">
+
 <!--start....main headere-->
 <div class="card-header">
 
-  <div class="row mt-12" ><!--start....header row-->
-  
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    <div class="dropdown allifmaal-content-dropdown">
-      <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Actions
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <div class="content-dropdown-menu">
-           
-          <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditSalaryDetails' allifquery.id user_var glblslug %}">Edit Details</a></li>
+<div class="row mt-12" ><!--start....header row-->
+
+<div class="col-md-12"><!--start....header column-->
+
+<div class="container-fluid amel-content-header">
+<div class="dropdown allifmaal-content-dropdown">
+  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+  Actions
+  </a>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <div class="content-dropdown-menu">
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditSalaryDetails' allifquery.id user_var glblslug %}">Edit Details</a></li>
          
-          <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonPostSalary' allifquery.id user_var glblslug %}">Post Payment</a></li>
-    
-          <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteSalary' allifquery.id user_var glblslug %}">Delete Item</a></li>
-          
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonPostSalary' allifquery.id user_var glblslug %}">Post Payment</a></li>
 
-    
-       </div>
-      </ul>
-    </div>
-
-    
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+      <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteSalary' allifquery.id user_var glblslug %}">Delete Item</a></li>
  
-  <a href="{% url 'allifmaalcommonapp:commonSupplierPayments' user_var glblslug %}">Supplier Payments</a>
-  <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}">Suppliers</a>
-  </div>
-  
-      </div><!--end....header column-->
-    
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
-<div class="allifmaincontainer">
-  <div class="row mt-12"> <!--start....table row-->
+   </div>
+  </ul>
+</div>
+<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
 
-  {% if myallifquery %}
+<a href="{% url 'allifmaalcommonapp:commonExpenses' user_var glblslug %}">Expenses</a>
+
+
+</div>
+
+    </div><!--end....header column-->
+  
+  </div><!--end....header row-->
+
+</div><!--end....main headere-->
+
+  <div class="allifmaincontainer">
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">{{allifquery}} Salary Payment Details</div>
+  <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
-    <!--start of the table-->
-
-        <table class="table table-layout">
-        <thead>
-        <tr class="allif-table-header-row">
-        <td>Quote No.</td>
-        <td>Customer</td>
-        <td>Amount</td>
-        
-        <td>No</td>
-        <td>Yes</td>
-        
-        </tr>
-          </thead>
-          <tbody class="allif-table-body">  
-          <tr sid="allif-delete-on-table-row">
-           
-            <td id="allif-delete-on-table-row"> Delete {{myallifquery.number}} ?</td>
-            <td id="allif-delete-on-table-row">{{myallifquery.customer}}</td>
-            <td id="allif-delete-on-table-row">{{myallifquery.total|floatformat:2|intcomma}}</td>
-            <td id="allif-delete-on-table-row">
-              <a href="{% url 'allifmaalcommonapp:commonSalaryDetails' allifquery.id user_var glblslug %}" class="body-delete-link">
-               Dont Delete
-               </a>
-              </td>
-            <td id="allif-delete-on-table-row">
-            <a href="{% url 'allifmaalcommonapp:commonDeleteSalary' myallifquery.id user_var glblslug %}" class="body-delete-link">
-             Yes Delete
-             </a>
-            </td>
-           
-          </tr>
-        </tbody>
-      </table>
-      </div>
-
-          {% endif %}
-        
-    <div class="table-content-description"> Payment Details for {{allifquery}} </div>
-    <div class="allif-details-container">
+    <div class="allif-info-tables">
       <div class="row"><!--start of row div --->
-        <!--start of column two-->
-        <div class="col-md-4">
-          <div class="allif-details-card ">
-            <!--start of the table here-->
-          <table class="table allif-details-table table-layout">
-            <tbody>
-              <tr>
-                <td>Company</td>
-                <td>{{allifquery.company}}</td>
-            
-                </tr>
-              <tr>
-                <td>Division</td>
-                <td>{{allifquery.division}}</td>
-            
-                </tr>
-                <tr>
-                  <td>Branch</td>
-                  <td>{{allifquery.branch}}</td>
-              
-                  </tr>
-              <tr>
-                <td>Department</td>
-                <td>{{allifquery.department}}</td>
-            
-                </tr>
-          
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
+        <tr>
+          <td class="allif-fix-table-col">Company</td>
+          <td>{{allifquery.company}}</td>
+          </tr>
+      <tr>
+        <td class="allif-fix-table-col">Division</td>
+        <td>{{allifquery.division}}</td>
+        </tr>
+      <tr>
+        <td class="allif-fix-table-col">Branch</td>
+        <td>{{allifquery.branch}}</td>
+        </tr>
+     
+      
+            <tr>
+              <td class="allif-fix-table-col">Department</td>
+              <td>{{allifquery.department}}</td>
+              </tr>
+        </tbody>
+        </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+
+      <tr>
+        <td class="allif-fix-table-col">Staff</td>
+        <td>{{allifquery.staff}}</td>
+        </tr>
+        <tr>
+          <td class="allif-fix-table-col">Description</td>
+          <td>{{allifquery.description}}</td>
+          </tr>
+      <tr>
+        <td class="allif-fix-table-col">Amount</td>
+        <td>{{allifquery.amount|floatformat:2|intcomma}}</td>
+        </tr>
+
+        <tr>
+          <td class="allif-fix-table-col">Pay from Account</td>
+          <td>{{allifquery.account}}</td>
+          </tr>
+       
           </tbody>
           </table>
-        
           </div>
-              </div>
-      
-           
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-            <tr>
-                <td>Pay from Account</td>
-                <td>{{allifquery.account}}</td>
-            
-                </tr>
-               
-                <tr>
-                  <td>Supplier</td>
-                  <td>{{allifquery.supplier}}</td>
-                  
-                </tr>
-                <tr>
-                  <td>Description</td>
-                  <td>{{allifquery.description}}</td>
-                  
-                </tr>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+        
               <tr>
-                <td>Amount</td>
-                <td >{{allifquery.amount|floatformat:2|intcomma}}</td>
-              </tr>
+                <td class="allif-fix-table-col">Posting Status</td>
+                <td>{{allifquery.status}}</td>
+                </tr>
+
+<tr>
+  <td class="allif-fix-table-col">Created By</td>
+  <td>{{allifquery.owner}}</td>
+  </tr>
+
+          <tr>
+            <td class="allif-fix-table-col">Date</td>
+            <td>{{allifquery.date|date:'d/m/Y'}}</td>
+            </tr>
           
-        </tbody>
-        </table>
+            <tr>
+              <td class="allif-fix-table-col">Comments</td>
+              <td>{{allifquery.comments}}</td>
+          
+          </tr> 
+          <tr>
+            <td class="allif-fix-table-col">Terms</td>
+            <td>{{allifquery.mode}}</td>
+        
+        </tr> 
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
       
         </div>
-            </div>
-      
-      
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-            <tr>
-              <td>Comments</td>
-              <td>{{allifquery.comments}}</td>
-              
-            </tr>
-           
-        <tr>
-          <td>Mode of payment</td>
-          <td>{{allifquery.mode}}</td>
-      
-    </tr>
-    <tr>
-        <td>Posting Status</td>
-        <td>{{allifquery.status}}</td>
-    
-  </tr>
-    <tr>
-      <td>Created By</td>
-      <td>{{allifquery.owner}}</td>
-  
-      
-      </tr> 
-        <tr>
-          <td>Created On</td>
-          <td>{{allifquery.date|date:'d/m/Y'}}</td>
-        </tr>
-      
-        </tbody>
-        </table>
-      
-      </div>
-    </div>
-      
-      </div><!--end of row div --->
-        
-          </div>
-          <hr>
 
 </div><!--end....table row-->
-
+</div>
+<!--end of table-->
 
 </div><!--end of main container of the page....-->
 
+<hr>
+
+</div>
+</div>
   {% block scripts %}
 
   {% endblock %}
