--- a/allifmaalcommonapp/templates/allifmaalcommonapp/jobs/invoice-job.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/jobs/invoice-job.html
@@ -6,6 +6,7 @@
 {% block style %}
 {%endblock%}
 {% block body %}
+<div class="allifmaal-main-container">
 <!--start....main headere-->
 <div class="card-header">
   <div class="row mt-12" ><!--start....header row-->
@@ -13,8 +14,10 @@
   <div class="container-fluid amel-content-header">
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
     
+    
     <a href="{% url 'allifmaalcommonapp:commonQuotes' user_var glblslug %}">Quotations</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddJobDetails' allifquery.id user_var glblslug %}">Job</a>
+    <a href="{% url 'allifmaalcommonapp:commonInvoices' user_var glblslug %}">Invoices</a>
+    
   </div>
   
       </div><!--end....header column-->
@@ -29,173 +32,127 @@
       <div class="allif-form-container">
       
       <div class="row"><!--start of row div --->
-        
-      <div class="allif-scroll-table">
-      <!--start of the table-->
-
+        <div class="allif-scroll-table">
+          <div class="table-responsive allif-full-table">
           <table class="table table-layout">
-          <thead>
-          <tr class="allif-table-header-row">
-          <td>No.</td>
-          <td>Items</td>
-          <td>Quantity</td>
-          <td>Stock</td>
-          <td>Cost</td>
-          <td>Price</td>
-         
-          <td>Amount</td>
-          <td>Discount</td>
-          <td>Total</td>
-          <td>Tax</td>
-          <td>Actions</td>
-          
-          </tr>
-            </thead>
-            <tbody class="allif-table-body">
-              {% if myquery %}
-             
-            <tr>
-              <form method='POST' action=''>{% csrf_token %}
-                <td id="allif-table-inline-form"></td>
-                <td id="allif-table-inline-form">{{form.description}}</td>
-                <td id="allif-table-inline-form">{{form.quantity}}</td>
-                <td id="allif-table-inline-form">{{myquery.description.quantity|floatformat:2|intcomma}}</td>
-                <td id="allif-table-inline-form">{{myquery.description.unitcost|floatformat:2|intcomma}}</td>
-                <td id="allif-table-inline-form">{{myquery.description.unitPrice|floatformat:2|intcomma}}</td>
-                <td id="allif-table-inline-form">{{myquery.invoice_selling_price|floatformat:2|intcomma}}</td>
-                <td id="allif-table-inline-form">{{form.discount}}</td>
-                <td id="allif-table-inline-form">{{myquery.invoice_selling_price_with_discount|floatformat:2|intcomma}}</td>
-
-                <td id="allif-table-inline-form" colspan="1"> 
-                <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn">
-              </td>
-                <td id="allif-table-inline-form" colspan="2"></td>
-              </form>
-            </tr>
-              {% else %}
-          <tr>
-            
-            <form method='POST' action=''>{% csrf_token %}
-              <td id="allif-table-inline-form"></td>
-              <td id="allif-table-inline-form">{{form.item}}</td>
-             
-              <td id="allif-table-inline-form">{{form.quantity}}</td>
-             
-              <td id="allif-table-inline-form" colspan="1"> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
-              <td id="allif-table-inline-form" colspan="8"></td>
-            </form>
-            </tr>
-            {% endif %}
+            <thead>
+              <tr class="allif-table-header-row">
+               
+                <td>Items</td>
+                <td>Quantity</td>
+                <td>Stock</td>
+                <td>Cost</td>
+                <td>Price</td>
+               
+                <td>Amount</td>
+                <td>Discount</td>
+                <td>Total</td>
+                <td>Tax</td>
+              <td>Navigate</td>
               
-          {% if myallifquery %}
-          <tr sid="allif-delete-on-table-row">
-            <td id="allif-delete-on-table-row">01</td>
-            <td id="allif-delete-on-table-row"> Delete {{myallifquery.description}} ?</td>
-            <td id="allif-delete-on-table-row">{{myallifquery.quantity|floatformat:2|intcomma}}</td>
-            <td id="allif-delete-on-table-row">{{myallifquery.description.quantity|floatformat:2|intcomma}}</td>
-            <td id="allif-delete-on-table-row">{{myallifquery.description.unitcost|floatformat:2|intcomma}}</td>
-            <td id="allif-delete-on-table-row">{{myallifquery.description.unitPrice|floatformat:2|intcomma}}</td>
-            <td id="allif-delete-on-table-row">{{myallifquery.invoice_selling_price|floatformat:2|intcomma}}</td>
-
-            <td id="allif-delete-on-table-row">{{myallifquery.discount|floatformat:2|intcomma}}%</td>
-            <td id="allif-delete-on-table-row">{{myallifquery.invoice_selling_price_with_discount|floatformat:2|intcomma}}</td>
-
+              <td> . . . </td>
+              <td></td>
+              </tr>
+              </thead>
+              <tbody class="allif-table-body">
+              
+              <tr>
+                <form method='POST' action=''>{% csrf_token %}
+                 
+                  <td id="allif-table-inline-form">{{form.description}}</td>
+                  <td id="allif-table-inline-form">{{form.quantity}}</td>
+                  
+                  <td id="allif-table-inline-form"> <input type="submit" value='Add Item' class="btn btn-success allifmaal-submit-btn"></td>
+                  <td id="allif-table-inline-form" colspan="9"></td>
+                 
+                </form>
+                </tr>
+               
+              
+              {% for item in allifqueryset %} 
+              <tr data-id="{{item.id}}">
+              <td><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonStockItemDetails' item.description.id user_var glblslug %}">{{item.description}}</a></td>
             
-            <td id="allif-delete-on-table-row">{{myallifquery.description.taxrate.taxrate|floatformat:2|intcomma}}</td>
-            <td>
-              <div class="dropdown allifmaal-content-dropdown">
-                <a class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                open
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <div class="content-dropdown-menu">
-                  <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAddInvoiceItems' allifquery.id user_var glblslug %}">No</a></li>
-                  <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonDeleteInvoiceItem' myallifquery.id user_var glblslug %}">Delete</a></li>
-                </div>
-                </ul>
-              </div>
-            </td>
-            
-           
-          </tr>
-          {% endif %}
-            
-
-          {% for item in allifqueryset %}
-          <tr>
-          <td>{{forloop.counter|intcomma}}</td>
-          <td>{{item.description}}</td>
           <td>{{item.quantity|floatformat:2|intcomma}}</td>
           <td>{{item.description.quantity|floatformat:2|intcomma}}</td>
           <td>{{item.description.unitcost|floatformat:2|intcomma}}</td>
           <td>{{item.description.unitPrice|floatformat:2|intcomma}}</td>
           
-          <td>{{item.invoice_selling_price|floatformat:2|intcomma}}</td>
+          <td>{{item.quote_selling_price|floatformat:2|intcomma}}</td>
           <td>{{item.discount|floatformat:2|intcomma}}%</td>
-          <td>{{item.invoice_selling_price_with_discount|floatformat:2|intcomma}}</td>
+          <td>{{item.quote_selling_price_with_discount|floatformat:2|intcomma}}</td>
          
           <td>{{item.description.taxrate.taxrate|floatformat:2|intcomma}}%</td>
-          <td>
-            <div class="dropdown allifmaal-content-dropdown">
-              <a class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-              open
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                <div class="content-dropdown-menu">
-                <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonEditInvoiceItem' item.id user_var glblslug %}">Edit</a></li>
-                <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonWantToDeleteInvoiceItem' item.id user_var glblslug %}">Delete</a></li>
-              </div>
-              </ul>
-            </div>
-          </td>
-          
-         
+             
+               <td>
+                <div class="dropdown allifmaal-content-dropdown">
+                  <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+                  <div class="dropdown-content">
+                    <a href="{% url 'allifmaalcommonapp:commonEditInvoiceItem' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+                    <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+                    
+                  </div>
+                </div>
+                <div class="dropdown allif-confirm-action">
+                  
+                  <a href="{% url 'allifmaalcommonapp:commonAddInvoiceItems' item.allifinvitemconnector.id user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+                  <a href="{% url 'allifmaalcommonapp:commonDeleteInvoiceItem' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+                </div>
+                 
+               
+              </td>
+             <td> . . . </td>
+             <td></td>
+            
+        
           </tr>
           {% endfor %}
-
-        <tr>
-          <td id="allif-table-sums-section"></td>
-          <td id="allif-table-sums-section" colspan="5">Sub Total</td>
-          <td id="allif-table-sums-section">{{allifquery.total|floatformat:2|intcomma}}</td>
-          <td id="allif-table-sums-section" colspan="5"></td>
-          
-        </tr>
-
-        <tr>
-          <td id="allif-table-sums-section"></td>
-          <td id="allif-table-sums-section" colspan="6">Discount</td>
-          <td id="allif-table-sums-section">{{allifquery.discountAmount|floatformat:2|intcomma}}</td>
-          <td id="allif-table-sums-section" colspan="4"></td>
-          
+          <tr>
+           
+            <td id="allif-table-sums-section" colspan="5">Sub Total</td>
+            <td id="allif-table-sums-section">{{allifquery.total|floatformat:2|intcomma}}</td>
+            <td id="allif-table-sums-section" colspan="6"></td>
+            
           </tr>
+  
           <tr>
-            <td id="allif-table-sums-section"></td>
-            <td id="allif-table-sums-section" colspan="7">Discounted Amount</td>
-            <td id="allif-table-sums-section">{{allifquery.totalwithdiscount|floatformat:2|intcomma}}</td>
-            <td id="allif-table-sums-section" colspan="3"></td>
+            
+            <td id="allif-table-sums-section" colspan="6">Discount</td>
+            <td id="allif-table-sums-section">{{allifquery.discountAmount|floatformat:2|intcomma}}</td>
+            <td id="allif-table-sums-section" colspan="5"></td>
             
             </tr>
-
+            <tr>
+              
+              <td id="allif-table-sums-section" colspan="7">Discounted Amount</td>
+              <td id="allif-table-sums-section">{{allifquery.totalwithdiscount|floatformat:2|intcomma}}</td>
+              <td id="allif-table-sums-section" colspan="4"></td>
+              
+              </tr>
+  
+            
+            <tr>
+             
+              <td id="allif-table-sums-section" colspan="8"> Add Tax</td>
+              <td id="allif-table-sums-section">{{allifquery.taxAmount|floatformat:2|intcomma}}</td>
+              <td id="allif-table-sums-section" colspan="3"></td>
+              
+              </tr>
           
-          <tr>
-            <td id="allif-table-sums-section"></td>
-            <td id="allif-table-sums-section" colspan="8"> Add Tax</td>
-            <td id="allif-table-sums-section">{{allifquery.taxAmount|floatformat:2|intcomma}}</td>
-            <td id="allif-table-sums-section" colspan="2"></td>
-            
-            </tr>
-        
-              <tr>
-                <td id="allif-table-sums-section"></td>
-                <td id="allif-table-sums-section" colspan="7"><strong>Grand Total</strong></td>
-                <td id="allif-table-sums-section"><strong>{{allifquery.grandtotal|floatformat:2|intcomma}}</strong></td>
-                <td id="allif-table-sums-section" colspan="3"></td>
-                
-                </tr>
-        
-          </tbody>
+                <tr>
+                 
+                  <td id="allif-table-sums-section" colspan="7"><strong>Grand Total</strong></td>
+                  <td id="allif-table-sums-section"><strong>{{allifquery.grandtotal|floatformat:2|intcomma}}</strong></td>
+                  <td id="allif-table-sums-section" colspan="4"></td>
+                  
+                  </tr>
+            </tbody>
           </table>
           </div>
+         </div>
+
+          </tbody>
+          </table>
                    
       <!--end of table-->
           
@@ -207,7 +164,7 @@
             </div><!--end of first row body....-->
   
 </div><!--end of main container of the page-->
-
+</div>
   {% block scripts %}
 
   {% endblock %}
