--- a/allifmaalcommonapp/templates/allifmaalcommonapp/ledgerentries/ledger-entry-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/ledgerentries/ledger-entry-details.html
@@ -6,224 +6,153 @@
 {% block style %}
 {%endblock%}
 {% block body %}
+<div class="allifmaal-main-container">
+
 <!--start....main headere-->
 <div class="card-header">
 
-  <div class="row mt-12" ><!--start....header row-->
-  
-  <div class="col-md-12"><!--start....header column-->
-  
-  <div class="container-fluid amel-content-header">
-    <div class="dropdown allifmaal-content-dropdown">
-      <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Actions
-      </a>
-      <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-        <div class="content-dropdown-menu">
+<div class="row mt-12" ><!--start....header row-->
+
+<div class="col-md-12"><!--start....header column-->
+
+<div class="container-fluid amel-content-header">
+
+<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
+
+<a href="{% url 'allifmaalcommonapp:commonLedgerEntries' user_var glblslug %}">Ledger Entries</a>
 
 
-          <li><a class="dropdown-item body-delete-link" href="{% url 'allifmaalcommonapp:commonWantToDeleteLedgerEntry' allifquery.id user_var glblslug %}">Delete Item</a></li>
-          
-       </div>
-      </ul>
-    </div>
+</div>
 
-    
-    <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
- 
-  <a href="{% url 'allifmaalcommonapp:commonInvoices' user_var glblslug %}">Sales</a>
+    </div><!--end....header column-->
   
-  </div>
-  
-      </div><!--end....header column-->
-    
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
-<div class="allifmaincontainer">
-  <div class="row mt-12"> <!--start....table row-->
+  </div><!--end....header row-->
 
-  {% if myallifquery %}
+</div><!--end....main headere-->
+
+  <div class="allifmaincontainer">
+<div class="row mt-12"> <!--start....table row-->
+  <div class="table-details-content-description">Ledger Entry Details</div>
+  <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
-    <!--start of the table-->
-
-        <table class="table table-layout">
-        <thead>
-        <tr class="allif-table-header-row">
-        <td>Quote No.</td>
-        <td>Customer</td>
-        <td>Amount</td>
-        
-        <td>No</td>
-        <td>Yes</td>
-        
-        </tr>
-          </thead>
-          <tbody class="allif-table-body">  
-          <tr sid="allif-delete-on-table-row">
-           
-            <td id="allif-delete-on-table-row"> Delete {{myallifquery.number}} ?</td>
-            <td id="allif-delete-on-table-row">{{myallifquery.customer}}</td>
-            <td id="allif-delete-on-table-row">{{myallifquery.total|floatformat:2|intcomma}}</td>
-            <td id="allif-delete-on-table-row">
-              <a href="{% url 'allifmaalcommonapp:commonLedgerEntryDetails' allifquery.id user_var glblslug %}" class="body-delete-link">
-               Dont Delete
-               </a>
-              </td>
-            <td id="allif-delete-on-table-row">
-            <a href="{% url 'allifmaalcommonapp:commonDeleteLedgerEntry' myallifquery.id user_var glblslug %}" class="body-delete-link">
-             Yes Delete
-             </a>
-            </td>
-           
-          </tr>
-        </tbody>
-      </table>
-      </div>
-
-          {% endif %}
-        
-    <div class="table-content-description"> {{allifquery}} </div>
-    <div class="allif-details-container">
+    <div class="allif-info-tables">
       <div class="row"><!--start of row div --->
-        <!--start of column two-->
-        <div class="col-md-4">
-          <div class="allif-details-card ">
-            <!--start of the table here-->
-          <table class="table allif-details-table table-layout">
-            <tbody>
-              <tr>
-                <td>Company</td>
-                <td>{{allifquery.company}}</td>
-            
-                </tr>
-              <tr>
-                <td>Division</td>
-                <td>{{allifquery.division}}</td>
-            
-                </tr>
-                <tr>
-                  <td>Branch</td>
-                  <td>{{allifquery.branch}}</td>
-              
-                  </tr>
-              <tr>
-                <td>Department</td>
-                <td>{{allifquery.department}}</td>
-            
-                </tr>
-          <tr>
-            <td>Customer</td>
-            <td>{{allifquery.customer}}</td>
-        
-            </tr>
-            <tr>
-                <td>Supplier</td>
-                <td>{{allifquery.supplier}}</td>
-            
-                </tr>
-                <tr>
-                    <td>Staff</td>
-                    <td>{{allifquery.staff}}</td>
-                
-                    </tr>
-            <tr>
-              <td>Balance</td>
-              <td>{{allifquery.balance}}</td>
-              
-            </tr>
-           
-          </tbody>
-          </table>
-        
-          </div>
-              </div>
-      
-           
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
+  <!--start of column two-->
+  <div class="col-md-4">
+    
+      <!--start of the table here-->
+      <div class="table-responsive">
+      <table class="table table-layout">
+      <tbody>
 
+        <tr>
+          <td class="allif-fix-table-col">Supplier</td>
+          <td>{{allifquery.supplier}}</td>
+          </tr>
+
+          <tr>
+            <td class="allif-fix-table-col">Customer</td>
+            <td>{{allifquery.customer}}</td>
+            </tr>
+          
             <tr>
-                <td>Credit</td>
-                <td>{{allifquery.credit|floatformat:2|intcomma}}</td>
-                
+              <td class="allif-fix-table-col">Staff</td>
+              <td>{{allifquery.staff}}</td>
               </tr>
               <tr>
-                  <td>Debit</td>
-                  <td>{{allifquery.debit|floatformat:2|intcomma}}</td>
-                  
+                <td class="allif-fix-table-col">Supplier</td>
+                <td>{{allifquery.supplier}}</td>
                 </tr>
-                <tr>
-                  <td>Owner</td>
-                  <td>{{allifquery.ledgowner}}</td>
-                  
-                </tr>
-                <tr>
-                  <td>Original Amount</td>
-                  <td>{{allifquery.originalamount|floatformat:2|intcomma}}</td>
-                  
-                </tr>
-                <tr>
-                  <td>New Amount</td>
-                  <td>{{allifquery.newamount|floatformat:2|intcomma}}</td>
-                  
-                </tr>
-                <tr>
-                  <td>Comments</td>
-                  <td>{{allifquery.comments}}</td>
-                  
-                </tr>
-
-
-            
         </tbody>
         </table>
+      </div>
+        </div>
+           
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+       <!--start of the table here-->
+       <div class="allif-details-card table-responsive">
+       <table class="table table-layout">
+        <tbody>
+
+        
+              <tr>
+                <td class="allif-fix-table-col">Balance</td>
+                <td>{{allifquery.balance|floatformat:2|intcomma}}</td>
+                </tr>
+
+                <tr>
+                  <td class="allif-fix-table-col">Credit</td>
+                  <td>{{allifquery.credit|floatformat:2|intcomma}}</td>
+                  </tr>
+
+                  <tr>
+                    <td class="allif-fix-table-col">Debit</td>
+                    <td>{{allifquery.debit|floatformat:2|intcomma}}</td>
+                    </tr>
+
+                    <tr>
+                      <td class="allif-fix-table-col">Original Amount</td>
+                      <td>{{allifquery.originalamount|floatformat:2|intcomma}}</td>
+                      </tr>
+
+                      <tr>
+                        <td class="allif-fix-table-col">New Amount</td>
+                        <td>{{allifquery.newamount|floatformat:2|intcomma}}</td>
+                        </tr>
+
+          </tbody>
+          </table>
+          </div>
+          </div>
+    
+    
+     <!--start of column two-->
+     <div class="col-md-4">
+      <div class="allif-details-card table-responsive">
+       <!--start of the table here-->
+       <table class="table table-layout">
+        <tbody>
+        
+          <tr>
+            <td class="allif-fix-table-col">Owner</td>
+            <td>{{allifquery.ledgowner}}</td>
+            </tr>
+           
+<tr>
+  <td class="allif-fix-table-col">Created By</td>
+  <td>{{allifquery.owner}}</td>
+  </tr>
+
+          <tr>
+            <td class="allif-fix-table-col">Date</td>
+            <td>{{allifquery.date|date:'d/m/Y'}}</td>
+            </tr>
+          
+            <tr>
+              <td class="allif-fix-table-col">Comments</td>
+              <td>{{allifquery.comments}}</td>
+          
+          </tr> 
+          </tbody>
+          </table>
+  </div>
+    </div>
+    </div><!--end of row div --->
       
         </div>
-            </div>
-      
-      
-       <!--start of column two-->
-       <div class="col-md-4">
-        <div class="allif-details-card ">
-          <!--start of the table here-->
-        <table class="table table-layout allif-details-table">
-          <tbody>
-          
-    <tr>
-      <td>Created By</td>
-      <td>{{allifquery.owner}}</td>
-  
-      
-      </tr> 
-        <tr>
-          <td>Created On</td>
-          <td>{{allifquery.date|date:'d/m/Y'}}</td>
-        </tr>
-      
-        </tbody>
-        </table>
-      
-      </div>
-    </div>
-      
-      </div><!--end of row div --->
-        
-          </div>
-          <hr>
 
 </div><!--end....table row-->
-
-
+</div>
 <!--end of table-->
-
 
 </div><!--end of main container of the page....-->
 
+<hr>
+
+</div>
+</div>
   {% block scripts %}
 
   {% endblock %}
