--- a/allifmaalcommonapp/templates/allifmaalcommonapp/payments/customers/customer-posted-payments.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/payments/customers/customer-posted-payments.html
@@ -6,10 +6,10 @@
 {% block style %}
 {%endblock%}
 {% block body %}
-
+<div class="allifmaal-main-container">
 <!--start....main headere-->
 <div class="card-header">
-   
+  
   <div class="row mt-12" ><!--start....header row-->
   
   <div class="col-md-12"><!--start....header column-->
@@ -91,26 +91,12 @@
       </div>
       </ul>
     </div>
-
-    <a class="amel-table-list-identifier">Supplier Payments:</a>
+    <a class="amel-table-list-identifier">Customer Payments:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-    <a href="{% url 'allifmaalcommonapp:commonPostedCustomerPayments' user_var glblslug %}">Posted Customer Payments</a>
+    <a href="{% url 'allifmaalcommonapp:commonPostedSupplierPayments' user_var glblslug %}">Posted Supplier Payments</a>
     
     <a href="{% url 'allifmaalcommonapp:commonPaySupplierDirect' user_var glblslug %}">New Supplier Payment</a>
 
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Modules
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}">Customers</a></li>
-      
-    </div>
-    </ul>
-  </div>
-  <a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
   </div>
   
       </div><!--end....header column-->
@@ -122,39 +108,90 @@
     
 <div class="row mt-12"> <!--start....table row-->
 <div class="col-md-12"> <!--start....table column-->
+
+     
   
-<div class="allif-scroll-table">
-<table class="table table-layout">
-<thead>
-  <tr class="allif-table-header-row" >
-  <td>Payment Description</td>
-  <td>Customer</td>
-  <td>Amount</td>
-  <td>Department</td>
-  <td>By</td>
-  <td>Date</td>
-  
-  </tr>
-  </thead>
-  <tbody class="allif-table-body">
+  <div class="allif-scroll-table">
+    <div class="table-responsive allif-full-table">
+    <table class="table table-layout">
+      <thead>
+        <tr class="allif-table-header-row">
+        <td class="allif-fix-table-col">Description</td>
+        <td>Customer</td>
+        <td>Amount</td>
+       
+        <td>By</td>
+        <td>Date</td>
+        
+        <td>Navigate</td>
+        
+        <td> . . . </td>
+        <td></td>
+        </tr>
+        </thead>
+        <tbody class="allif-table-body">
+         
+        
+        {% for item in allifqueryset %} 
+        <tr data-id="{{item.id}}">
+        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonCustomerPaymentDetails' item.id user_var glblslug %}">{{item.description}}</a></td>
+    
+        <td>
+          {{item.customer}}
+        </td>
+      <td>
+      <a href="{% url 'allifmaalcommonapp:commonCustomerPaymentDetails' item.id user_var glblslug %}" class="allif-table-links">
+      {{item.amount|floatformat:2|intcomma}}
+      </a></td>
+      
    
-  
-  {% for item in allifqueryset %}   
-  <tr>
     <td>
-      {{item.description}}
+      {{item.owner}}
     </td>
     <td>
-      {{item.customer}}
+      {{item.date|date:'d/m/Y'}}
     </td>
-  <td>
-  <a href="{% url 'allifmaalcommonapp:commonCustomerPaymentDetails' item.id user_var glblslug %}" class="allif-table-links">
-  {{item.amount|floatformat:2|intcomma}}
-  </a></td>
+    
+    
+         <td>
+          <div class="dropdown allifmaal-content-dropdown">
+            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+            <div class="dropdown-content">
+              <a href="{% url 'allifmaalcommonapp:commonEditCustomerPayment' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+              <a href="{% url 'allifmaalcommonapp:commonPostCustomerPayment' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Post Item</a>
+              
+              
+              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+              
+            </div>
+          </div>
+          <div class="dropdown allif-confirm-action">
+            
+            <a href="{% url 'allifmaalcommonapp:commonCustomerPayments' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+            <a href="{% url 'allifmaalcommonapp:commonDeleteCustomerPayment' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+          </div>
+
+         
+        </td>
+       <td> . . . </td>
+       <td></td>
+      
   
+    </tr>
+    {% endfor %}
+    {% if searched_data %}
+    {% for item in searched_data %}
+    <tr data-id="{{item.id}}">
+      <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonCustomerPaymentDetails' item.id user_var glblslug %}">{{item.description}}</a></td>
+  
+      <td>
+        {{item.customer}}
+      </td>
     <td>
-    {{item.department}}
-  </td>
+    <a href="{% url 'allifmaalcommonapp:commonCustomerPaymentDetails' item.id user_var glblslug %}" class="allif-table-links">
+    {{item.amount|floatformat:2|intcomma}}
+    </a></td>
+    
  
   <td>
     {{item.owner}}
@@ -163,44 +200,40 @@
     {{item.date|date:'d/m/Y'}}
   </td>
   
+  
+       <td>
+        <div class="dropdown allifmaal-content-dropdown">
+          <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+          <div class="dropdown-content">
+            <a href="{% url 'allifmaalcommonapp:commonEditCustomerPayment' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+            <a href="{% url 'allifmaalcommonapp:commonPostCustomerPayment' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Post Item</a>
+            
+            
+            <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item</a>
+            
+          </div>
+        </div>
+        <div class="dropdown allif-confirm-action">
+          
+          <a href="{% url 'allifmaalcommonapp:commonCustomerPayments' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
+          <a href="{% url 'allifmaalcommonapp:commonDeleteCustomerPayment' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+        </div>
+
+       
+      </td>
+     <td> . . . </td>
+     <td></td>
     
-    </tr>
-      {% endfor %}
-      
-      {% if searched_data %}
-      {% for item in searched_data %}   
-      <tr>
-      
-        <td>
-          {{item.description}}
-        </td>
-        <td>
-          {{item.supplier}}
-        </td>
-      <td>
-      <a href="{% url 'allifmaalcommonapp:commonSupplierPaymentDetails' item.id user_var glblslug %}" class="allif-table-links">
-      {{item.amount|floatformat:2|intcomma}}
-      </a></td>
-      
-        <td>
-        {{item.department}}
-      </td>
-     
-      <td>
-        {{item.owner}}
-      </td>
-      <td>
-        {{item.date|date:'d/m/Y'}}
-      </td>
-        
-        </tr>
-        {% endfor %}
-        {% endif %}
 
-  </tbody>
+  </tr>
+    {% endfor %}
+      {%endif %}
+
+      </tbody>
     </table>
+    </div>
+   </div>
 
-  </div>
   
   </div><!--end....table column-->
   </div>
@@ -217,8 +250,6 @@
   
    {% endblock %}
    
-
-
 
 
 
